--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -7,7 +7,7 @@ Total Number : {{count}}
     <textarea  cols="30" rows="10">
     EventEmitter : If you want to call a method of parent when a event of child is created
     Here event1 is the event name and the event is emmitted when the below button is clicked.
-    In parent template, for this event(event1), a method of parent can be configured
+    In parent template, for this event(event1), a method of parent can be configured-1
 </textarea>
 <button (click) ="onComponentClickEvent()"> Click me</button>
 </div>
